<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/farm"
        android:src="@drawable/farm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/welcome_message"
        android:textSize="22sp"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:background="@android:color/black" />

    <!-- About us section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo_about_us"
            android:src="@drawable/ic_info_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16sp" />

        <TextView
            android:id="@+id/text_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/about_us"
            android:textSize="12sp" />

    </LinearLayout>

    <!-- Address section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo_location"
            android:src="@drawable/ic_location_on_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/text_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/location"
            android:textSize="12sp"
            android:fontFamily="sans-serif"/>

    </LinearLayout>

    <!-- Schedule section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo_schedule"
            android:src="@drawable/ic_schedule_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:id="@+id/text_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/schedule"
            android:textSize="12sp"
            android:fontFamily="sans-serif" />

    </LinearLayout>

    <!-- Phone section -->
    <LinearLayout
        android:id="@+id/inner_phone_linear_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo_phone"
            android:src="@drawable/ic_phone_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/phone"
            android:textSize="12sp"
            android:fontFamily="sans-serif" />

    </LinearLayout>

    <!-- Contact us section -->
    <LinearLayout
        android:id="@+id/inner_contact_linear_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo_contact"
            android:src="@drawable/ic_email_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/text_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/contact_us"
            android:textSize="12sp"
            android:fontFamily="sans-serif" />

    </LinearLayout>

</LinearLayout>
